--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -902,34 +902,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Podcast_Name                        0\n",
-       "Episode_Title                       0\n",
-       "Episode_Length_minutes          87093\n",
-       "Genre                               0\n",
-       "Host_Popularity_percentage          0\n",
-       "Publication_Day                     0\n",
-       "Publication_Time                    0\n",
-       "Guest_Popularity_percentage    146028\n",
-       "Number_of_Ads                       1\n",
-       "Episode_Sentiment                   0\n",
-       "Listening_Time_minutes              0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df_cleaned.isnull().sum()"
+    "Rid null values???"
    ]
   }
  ],
