--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "4                75.61031  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "4                75.61031  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "max                     119.910000     103.910000              119.970000  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,8 +615,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Potentially will create a new feature where guest present or not present, while keeping guest popularity percentage where guest popularity had a value. Even though the Episode_Length_minutes has a lot of null values it is a important feature so I will most likely use a model that handles those well. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +631,6 @@
      "output_type": "stream",
      "text": [
       "Number of rows with fractional floats in 'Number_of_Ads': 7\n",
-      "------------------------------\n",
       "DataFrame after removing fractional float rows:\n"
      ]
     },
@@ -878,7 +884,7 @@
        "[749993 rows x 11 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,19 +899,277 @@
     "# 2. State the number of fractional floats found\n",
     "num_fractional_rows = is_fractional.sum()\n",
     "print(f\"Number of rows with fractional floats in 'Number_of_Ads': {num_fractional_rows}\")\n",
-    "print(\"-\" * 30)\n",
     "\n",
     "# 3. Delete rows containing fractional floats\n",
-    "df_cleaned = df.loc[~is_fractional].copy() # Use .loc and .copy()\n",
+    "df_cleaned = df.loc[~is_fractional].copy() \n",
     "print(\"DataFrame after removing fractional float rows:\")\n",
     "df_cleaned"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Podcast_Name</th>\n",
+       "      <th>Episode_Title</th>\n",
+       "      <th>Episode_Length_minutes</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Host_Popularity_percentage</th>\n",
+       "      <th>Publication_Day</th>\n",
+       "      <th>Publication_Time</th>\n",
+       "      <th>Guest_Popularity_percentage</th>\n",
+       "      <th>Number_of_Ads</th>\n",
+       "      <th>Episode_Sentiment</th>\n",
+       "      <th>Listening_Time_minutes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mystery Matters</td>\n",
+       "      <td>Episode 98</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True Crime</td>\n",
+       "      <td>74.81</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>31.41998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Joke Junction</td>\n",
+       "      <td>Episode 26</td>\n",
+       "      <td>119.80</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>66.95</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>Afternoon</td>\n",
+       "      <td>75.95</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>88.01241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Study Sessions</td>\n",
+       "      <td>Episode 16</td>\n",
+       "      <td>73.90</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>69.97</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>Evening</td>\n",
+       "      <td>8.97</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>44.92531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Digital Digest</td>\n",
+       "      <td>Episode 45</td>\n",
+       "      <td>67.17</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>57.22</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>78.70</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>46.27824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mind &amp; Body</td>\n",
+       "      <td>Episode 86</td>\n",
+       "      <td>110.51</td>\n",
+       "      <td>Health</td>\n",
+       "      <td>80.07</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Afternoon</td>\n",
+       "      <td>58.68</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>75.61031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>749995</th>\n",
+       "      <td>Learning Lab</td>\n",
+       "      <td>Episode 25</td>\n",
+       "      <td>75.66</td>\n",
+       "      <td>Education</td>\n",
+       "      <td>69.36</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>56.87058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>749996</th>\n",
+       "      <td>Business Briefs</td>\n",
+       "      <td>Episode 21</td>\n",
+       "      <td>75.75</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>35.21</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>45.46242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>749997</th>\n",
+       "      <td>Lifestyle Lounge</td>\n",
+       "      <td>Episode 51</td>\n",
+       "      <td>30.98</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>78.58</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>84.89</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>15.26000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>749998</th>\n",
+       "      <td>Style Guide</td>\n",
+       "      <td>Episode 47</td>\n",
+       "      <td>108.98</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>45.39</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>93.27</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>100.72939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>749999</th>\n",
+       "      <td>Sports Central</td>\n",
+       "      <td>Episode 99</td>\n",
+       "      <td>24.10</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>22.45</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>36.72</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>11.94439</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>749992 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Podcast_Name Episode_Title  Episode_Length_minutes       Genre  \\\n",
+       "0        Mystery Matters    Episode 98                     NaN  True Crime   \n",
+       "1          Joke Junction    Episode 26                  119.80      Comedy   \n",
+       "2         Study Sessions    Episode 16                   73.90   Education   \n",
+       "3         Digital Digest    Episode 45                   67.17  Technology   \n",
+       "4            Mind & Body    Episode 86                  110.51      Health   \n",
+       "...                  ...           ...                     ...         ...   \n",
+       "749995      Learning Lab    Episode 25                   75.66   Education   \n",
+       "749996   Business Briefs    Episode 21                   75.75    Business   \n",
+       "749997  Lifestyle Lounge    Episode 51                   30.98   Lifestyle   \n",
+       "749998       Style Guide    Episode 47                  108.98   Lifestyle   \n",
+       "749999    Sports Central    Episode 99                   24.10      Sports   \n",
+       "\n",
+       "        Host_Popularity_percentage Publication_Day Publication_Time  \\\n",
+       "0                            74.81        Thursday            Night   \n",
+       "1                            66.95        Saturday        Afternoon   \n",
+       "2                            69.97         Tuesday          Evening   \n",
+       "3                            57.22          Monday          Morning   \n",
+       "4                            80.07          Monday        Afternoon   \n",
+       "...                            ...             ...              ...   \n",
+       "749995                       69.36        Saturday          Morning   \n",
+       "749996                       35.21        Saturday            Night   \n",
+       "749997                       78.58        Thursday          Morning   \n",
+       "749998                       45.39        Thursday          Morning   \n",
+       "749999                       22.45        Saturday            Night   \n",
+       "\n",
+       "        Guest_Popularity_percentage  Number_of_Ads Episode_Sentiment  \\\n",
+       "0                               NaN            0.0          Positive   \n",
+       "1                             75.95            2.0          Negative   \n",
+       "2                              8.97            0.0          Negative   \n",
+       "3                             78.70            2.0          Positive   \n",
+       "4                             58.68            3.0           Neutral   \n",
+       "...                             ...            ...               ...   \n",
+       "749995                          NaN            0.0          Negative   \n",
+       "749996                          NaN            2.0           Neutral   \n",
+       "749997                        84.89            0.0          Negative   \n",
+       "749998                        93.27            0.0          Negative   \n",
+       "749999                        36.72            0.0           Neutral   \n",
+       "\n",
+       "        Listening_Time_minutes  \n",
+       "0                     31.41998  \n",
+       "1                     88.01241  \n",
+       "2                     44.92531  \n",
+       "3                     46.27824  \n",
+       "4                     75.61031  \n",
+       "...                        ...  \n",
+       "749995                56.87058  \n",
+       "749996                45.46242  \n",
+       "749997                15.26000  \n",
+       "749998               100.72939  \n",
+       "749999                11.94439  \n",
+       "\n",
+       "[749992 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Rid null values???"
+    "# Drop null values for Number_of_Ads\n",
+    "df_cleaned_dropped = df_cleaned.dropna(subset=['Number_of_Ads'])\n",
+    "df_cleaned_dropped"
    ]
   }
  ],
