--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -1171,6 +1171,87 @@
     "df_cleaned_dropped = df_cleaned.dropna(subset=['Number_of_Ads'])\n",
     "df_cleaned_dropped"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows where either percentage > 100: 44\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(749948, 11)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define the condition where percentages are over 100\n",
+    "condition_over_100 = (df_cleaned_dropped['Host_Popularity_percentage'] > 100) | \\\n",
+    "                     (df_cleaned_dropped['Guest_Popularity_percentage'] > 100)\n",
+    "\n",
+    "# Count how many rows meet the condition\n",
+    "rows_to_drop_count = condition_over_100.sum()\n",
+    "print(f\"Rows where either percentage > 100: {rows_to_drop_count}\")\n",
+    "\n",
+    "# Keep only rows where the condition is False (i.e., both <= 100)\n",
+    "df_cleaned_dropped = df_cleaned_dropped[~condition_over_100].copy()\n",
+    "df_cleaned_dropped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "DataFrame with the new 'Guest_Presence' column:\n",
+      "   Guest_Popularity_percentage  Guest_Presence\n",
+      "0                          NaN               0\n",
+      "1                        75.95               1\n",
+      "2                         8.97               1\n",
+      "3                        78.70               1\n",
+      "4                        58.68               1\n",
+      "5                          NaN               0\n",
+      "6                        39.02               1\n",
+      "7                        20.12               1\n",
+      "8                          NaN               0\n",
+      "9                        59.72               1\n",
+      "\n",
+      "Value counts for 'Guest_Presence':\n",
+      "Guest_Presence\n",
+      "1    603920\n",
+      "0    146028\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the 'Guest_Presence' column\n",
+    "df_cleaned_dropped['Guest_Presence'] = df_cleaned_dropped['Guest_Popularity_percentage'].notna().astype(int)\n",
+    "\n",
+    "# Display the relevant columns to verify\n",
+    "print(\"\\nDataFrame with the new 'Guest_Presence' column:\")\n",
+    "print(df_cleaned_dropped[['Guest_Popularity_percentage', 'Guest_Presence']].head(10))\n",
+    "\n",
+    "# Display value counts for the new column\n",
+    "print(\"\\nValue counts for 'Guest_Presence':\")\n",
+    "print(df_cleaned_dropped['Guest_Presence'].value_counts())"
+   ]
   }
  ],
  "metadata": {
