--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "4                75.61031  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "4                75.61031  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "max                     119.910000     103.910000              119.970000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "[749993 rows x 11 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
        "[749992 rows x 11 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
        "[749948 rows x 11 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1745,7 @@
        "[749948 rows x 12 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1787,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2071,7 +2071,7 @@
        "[749947 rows x 12 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2156,7 +2156,7 @@
        "8551"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,6 +2165,78 @@
     "# Number of rows where Listening time is 0\n",
     "zero_listening = (df_cleaned_dropped['Listening_Time_minutes'] == 0).sum()\n",
     "zero_listening"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.duplicated of             Podcast_Name Episode_Title  Episode_Length_minutes       Genre  \\\n",
+       "0        Mystery Matters    Episode 98                     NaN  True Crime   \n",
+       "1          Joke Junction    Episode 26                  119.80      Comedy   \n",
+       "2         Study Sessions    Episode 16                   73.90   Education   \n",
+       "3         Digital Digest    Episode 45                   67.17  Technology   \n",
+       "4            Mind & Body    Episode 86                  110.51      Health   \n",
+       "...                  ...           ...                     ...         ...   \n",
+       "749995      Learning Lab    Episode 25                   75.66   Education   \n",
+       "749996   Business Briefs    Episode 21                   75.75    Business   \n",
+       "749997  Lifestyle Lounge    Episode 51                   30.98   Lifestyle   \n",
+       "749998       Style Guide    Episode 47                  108.98   Lifestyle   \n",
+       "749999    Sports Central    Episode 99                   24.10      Sports   \n",
+       "\n",
+       "        Host_Popularity_percentage Publication_Day Publication_Time  \\\n",
+       "0                            74.81        Thursday            Night   \n",
+       "1                            66.95        Saturday        Afternoon   \n",
+       "2                            69.97         Tuesday          Evening   \n",
+       "3                            57.22          Monday          Morning   \n",
+       "4                            80.07          Monday        Afternoon   \n",
+       "...                            ...             ...              ...   \n",
+       "749995                       69.36        Saturday          Morning   \n",
+       "749996                       35.21        Saturday            Night   \n",
+       "749997                       78.58        Thursday          Morning   \n",
+       "749998                       45.39        Thursday          Morning   \n",
+       "749999                       22.45        Saturday            Night   \n",
+       "\n",
+       "        Guest_Popularity_percentage  Number_of_Ads Episode_Sentiment  \\\n",
+       "0                               NaN            0.0          Positive   \n",
+       "1                             75.95            2.0          Negative   \n",
+       "2                              8.97            0.0          Negative   \n",
+       "3                             78.70            2.0          Positive   \n",
+       "4                             58.68            3.0           Neutral   \n",
+       "...                             ...            ...               ...   \n",
+       "749995                          NaN            0.0          Negative   \n",
+       "749996                          NaN            2.0           Neutral   \n",
+       "749997                        84.89            0.0          Negative   \n",
+       "749998                        93.27            0.0          Negative   \n",
+       "749999                        36.72            0.0           Neutral   \n",
+       "\n",
+       "        Listening_Time_minutes  Guest_Presence  \n",
+       "0                     31.41998               0  \n",
+       "1                     88.01241               1  \n",
+       "2                     44.92531               1  \n",
+       "3                     46.27824               1  \n",
+       "4                     75.61031               1  \n",
+       "...                        ...             ...  \n",
+       "749995                56.87058               0  \n",
+       "749996                45.46242               0  \n",
+       "749997                15.26000               1  \n",
+       "749998               100.72939               1  \n",
+       "749999                11.94439               1  \n",
+       "\n",
+       "[749947 rows x 12 columns]>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaned_dropped.duplicated"
    ]
   }
  ],
