--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -2646,13 +2646,14 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# - Violin plots for a different look at numerical distributions:\n",
+    "# - Violin plots\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.violinplot(x='extra_equal_listening', y='Episode_Length_minutes', data=df_cleaned_dropped, palette=\"pastel\")\n",
     "plt.title('Episode Length vs. Extra/Equal Listening (Violin Plot)')\n",
     "plt.show()\n",
     "\n",
-    "# - Consider relationships with 'Number_of_Ads' as well, as it's numerical but discrete.\n",
+    "# - Ads\n",
+    "\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.boxplot(x='extra_equal_listening', y='Number_of_Ads', data=df_cleaned_dropped, palette=\"pastel\")\n",
     "plt.title('Number of Ads vs. Extra/Equal Listening')\n",
@@ -2669,6 +2670,58 @@
    "metadata": {},
    "source": [
     "Episode length tends to be shorter for podcasts that are fully listened to. Host popularity plays a bigger role in a podcast be completed than guest popularity. Technology podcasts are most likely to be completed, with Education as least. Positive sentiment episodes are most likely to be completed, as well as podcasts on Thursday. Median ad number of completed podcats is 1 ad. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop the column 'extra_equal_listening'\n",
+    "df_cleaned_dropped = df_cleaned_dropped.drop(columns=['extra_equal_listening'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 749947 entries, 0 to 749999\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                       Non-Null Count   Dtype  \n",
+      "---  ------                       --------------   -----  \n",
+      " 0   Podcast_Name                 749947 non-null  object \n",
+      " 1   Episode_Title                749947 non-null  float64\n",
+      " 2   Episode_Length_minutes       662860 non-null  float64\n",
+      " 3   Genre                        749947 non-null  object \n",
+      " 4   Host_Popularity_percentage   749947 non-null  float64\n",
+      " 5   Publication_Day              749947 non-null  object \n",
+      " 6   Publication_Time             749947 non-null  object \n",
+      " 7   Guest_Popularity_percentage  603920 non-null  float64\n",
+      " 8   Number_of_Ads                749947 non-null  float64\n",
+      " 9   Episode_Sentiment            749947 non-null  object \n",
+      " 10  Listening_Time_minutes       749947 non-null  float64\n",
+      " 11  Guest_Presence               749947 non-null  float64\n",
+      "dtypes: float64(7), object(5)\n",
+      "memory usage: 74.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_cleaned_dropped.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figure out what do with null values and make correlation heatmap. then do multivariate analysis of genre, publication day, sentiment, ads, podcast listening time, and length. add first place kaggle to lit review.import joblib. do previous models/hyperparameters, and xgboost. State reasoning behind decision and interpret results. hyperlinks. readme. "
    ]
   }
  ],
