--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -2467,7 +2467,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_1663/1975557257.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_2902/1975557257.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2490,36 +2490,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_1663/3947045609.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_2902/95050164.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_cleaned_dropped['extra_equal_listening'] = df_cleaned_dropped['Listening_Time_minutes'] >= df_cleaned_dropped['Episode_Length_minutes']\n",
-      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_1663/3947045609.py:4: SettingWithCopyWarning: \n",
+      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_2902/95050164.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_cleaned_dropped['extra_equal_listening'] = df_cleaned_dropped['extra_equal_listening'].map({True: 'Yes', False: 'No'})\n",
-      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_1663/3947045609.py:11: FutureWarning: \n",
+      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_2902/95050164.py:11: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.boxplot(x='extra_equal_listening', y='Episode_Length_minutes', data=df_cleaned_dropped, palette=\"pastel\")\n",
-      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_1663/3947045609.py:18: FutureWarning: \n",
+      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_2902/95050164.py:18: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.boxplot(x='extra_equal_listening', y='Host_Popularity_percentage', data=df_cleaned_dropped, palette=\"pastel\")\n",
-      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_1663/3947045609.py:25: FutureWarning: \n",
+      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_2902/95050164.py:25: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -2540,7 +2540,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_1663/3947045609.py:59: FutureWarning: \n",
+      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_2902/95050164.py:59: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -2561,7 +2561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_1663/3947045609.py:65: FutureWarning: \n",
+      "/var/folders/09/b7d153cx51x9h9tv6nflc5th0000gn/T/ipykernel_2902/95050164.py:66: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -2674,7 +2674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2684,37 +2684,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 749947 entries, 0 to 749999\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column                       Non-Null Count   Dtype  \n",
-      "---  ------                       --------------   -----  \n",
-      " 0   Podcast_Name                 749947 non-null  object \n",
-      " 1   Episode_Title                749947 non-null  float64\n",
-      " 2   Episode_Length_minutes       662860 non-null  float64\n",
-      " 3   Genre                        749947 non-null  object \n",
-      " 4   Host_Popularity_percentage   749947 non-null  float64\n",
-      " 5   Publication_Day              749947 non-null  object \n",
-      " 6   Publication_Time             749947 non-null  object \n",
-      " 7   Guest_Popularity_percentage  603920 non-null  float64\n",
-      " 8   Number_of_Ads                749947 non-null  float64\n",
-      " 9   Episode_Sentiment            749947 non-null  object \n",
-      " 10  Listening_Time_minutes       749947 non-null  float64\n",
-      " 11  Guest_Presence               749947 non-null  float64\n",
-      "dtypes: float64(7), object(5)\n",
-      "memory usage: 74.4+ MB\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "df_cleaned_dropped.info()"
+    "zero_count = (df_cleaned_dropped['Guest_Popularity_percentage'] == 0).sum()\n",
+    "print(zero_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 3 podcasts where the guest popularity was 0. To avoid redundancy, I will impute the Guest_Popularity_percentage null values with -1 to represent no guest present and get rid of the created guest presence column. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace null values in 'Guest_Popularity_percentage' with -1\n",
+    "df_cleaned_dropped['Guest_Popularity_percentage'] = df_cleaned_dropped['Guest_Popularity_percentage'].fillna(-1)\n",
+    "\n",
+    "# Delete the 'Guest_Presence' column\n",
+    "df_cleaned_dropped = df_cleaned_dropped.drop('Guest_Presence', axis=1)"
    ]
   },
   {
