--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -2774,7 +2774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "multivariate analysis of genre, publication day, sentiment, ads, podcast listening time, and length. add first place kaggle to lit review.import joblib. do previous models/hyperparameters, and xgboost. State reasoning behind decision and interpret results. hyperlinks. readme. "
+    "multivariate analysis of genre, publication day, sentiment, ads, podcast listening time, and length. (add first place kaggle to lit review).import joblib. (previous models/hyperparameters), (xgboost). State reasoning behind decision and interpret results. hyperlinks. readme. pics"
    ]
   }
  ],
