--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,9 @@
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "from joblib import dump"
    ]
   },
   {
@@ -2839,6 +2841,27 @@
    "metadata": {},
    "source": [
     "There are high listening time outliers for Sports podcasts posted on Sunday!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['cleaned_dataframe.joblib']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save DataFrame\n",
+    "dump(df_cleaned_dropped, 'cleaned_dataframe.joblib')"
    ]
   }
  ],
