--- a/code/transform.ipynb
+++ b/code/transform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from joblib import load"
+    "from joblib import load\n",
+    "import os"
    ]
   },
   {
@@ -217,7 +218,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are a lot of weak correlations. A linear model might not best capture these relationships."
+    "There are a lot of weak correlations. A simple linear model might not best capture these relationships."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_path = os.path.join('/Users/sa26/Documents/GitHub/Predict-Podcast-Listening-Time/data/processed', 'processed_train.csv')\n",
+    "df_encoded.to_csv(output_path, index=False)"
    ]
   }
  ],
