--- a/code/model.ipynb
+++ b/code/model.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random Forest performed better. Will use hyperparameter tuning to improve performance."
+    "Random Forest performed better. Will use hyperparameter tuning to improve performance. The Kaggle competition 1st place had a calculated MSE of ~132.4 for reference."
    ]
   },
   {
@@ -175,6 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The XGBoost did not improve much after hypertuning.\n",
     "I used the following code for hyperparameter tuning Random Forest. I had to stop since it was still loading after one hour!\n",
     "\n",
     "Define hyperparameter grid for Random Forest\n",
