--- a/code/model.ipynb
+++ b/code/model.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicing podcast listening time is a regression problem and involves non-linear relationships as seen through the heatmaps. I built models using XGBRegressor and RandomForestRegressor, with RandomForestRegressor performing better. I used RandomizedSearch to hypertune to save time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
