--- a/code/model.ipynb
+++ b/code/model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,13 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import RandomizedSearchCV"
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.impute import SimpleImputer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "XGBoost MSE: 170.0925087453645\n",
-      "Random Forest MSE: 160.23212858005616\n"
+      "Random Forest MSE: 160.38328034631223\n"
      ]
     }
    ],
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,6 +206,70 @@
     "rf_mse = mean_squared_error(y_test, best_rf.predict(X_test))\n",
     "print(f\"Random Forest MSE after tuning: {rf_mse}\")\n",
     "print(f\"Random Forest Best Parameters: {rf_search.best_params_}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer = SimpleImputer(strategy='median')\n",
+    "df['Episode_Length_minutes'] = imputer.fit_transform(df[['Episode_Length_minutes']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['missing_episode_length'] = df['Episode_Length_minutes'].isna().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer = SimpleImputer(strategy='median')\n",
+    "df['Episode_Length_minutes'] = imputer.fit_transform(df[['Episode_Length_minutes']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost MSE: 170.0925087453645\n",
+      "Random Forest MSE: 160.2461544080663\n"
+     ]
+    }
+   ],
+   "source": [
+    "# XGBoost Regressor after imputation\n",
+    "xgb_1 = XGBRegressor()\n",
+    "xgb_1.fit(X_train, y_train)\n",
+    "xgb_mse = mean_squared_error(y_test, xgb_1.predict(X_test))\n",
+    "print(f\"XGBoost MSE: {xgb_mse}\")\n",
+    "\n",
+    "# Random Forest Regressor after imputation\n",
+    "rf_1 = RandomForestRegressor()\n",
+    "rf_1.fit(X_train, y_train)\n",
+    "rf_mse = mean_squared_error(y_test, rf_1.predict(X_test))\n",
+    "print(f\"Random Forest MSE: {rf_mse}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My Random Forest model slightly improved after imputing the null values of 'Episode_Length_minutes' and creating an additional 'missing_episode_length' feature"
    ]
   }
  ],
